2001-06-11  Radek Doulik  <rodo@ximian.com>

	* htmlengine-edit-table.c (html_engine_insert_table): new function

2001-06-08  Radek Doulik  <rodo@ximian.com>

	* htmltokenizer.c (in_comment): don't allow comment end like this
	-a->

2001-06-07  Radek Doulik  <rodo@ximian.com>

	* Makefile.am (INCLUDES): added IMLIB cflags

	* htmlengine-edit-cut-and-paste.c (delete_object): check table
	only when cursor and mark are in non-empty flows
	(insert_object_do): be more careful about paragraph inserting
	around tables
	(insert_empty_paragraph): new extracted method, use undo direction
	(html_engine_insert_empty_paragraph): use insert_empty_paragraph
	(append_object): increment len by 2 when splitting

	* htmlclueflow.c (op_helper): don't handle tables specialy

	* htmlenumutils.c (html_valign_name): return "middle" MIDDLE value
	instead of "center"

	* htmlengine-edit-cut-and-paste.c (append_object): freeze/thaw
	engine and set changes
	(html_engine_append_object): removed freeze/thaw here
	(insert_object): moved tables fix here (from insert_object_do as
	we don't want two UNDO steps to be created)

	* htmlinterval.c (html_interval_flat): make this method public
	(html_interval_select): use flat interval

	* htmltext.c (word_get_position): kill warning

2001-06-05  Larry Ewing  <lewing@ximian.com>

	* htmlframe.c (html_frame_init): attach submit to frame_submit.
	(frame_submit): proxy signal, needs a little more love.

	* htmltextinput.c (html_text_input_key_pressed): fix a stupid cut
	& paste bug so that the enter handler actually works.

	* htmlradio.c (html_radio_init): call html_form_add_radio and
	change protype.
	(html_radio_new): change prototype.

	* htmlradio.h (html_radio_new): change prototype.

	* htmlengine.c (parse_input): fix to html_radio_new to match the
	new protoype.

	* htmlform.h: add prototype for html_form_add_radio.

	* htmlform.c (html_form_destroy): free the group hash.
	(html_form_add_radio): new function to handle radio groups
	correctly.